--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,21 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-     <title>TDK-MClaren</title>
+<title>TDK-MClaren</title>
+<meta name="title" content="TDK-MClaren" />
+<meta name="description" content="The future of electric mobility is here. TDK and NEOM McLaren Formula E" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://tdk-mclaren-lilac.vercel.app/" />
+<meta property="og:title" content="TDK-MClaren" />
+<meta property="og:description" content="The future of electric mobility is here. TDK and NEOM McLaren Formula E" />
+<meta property="og:image" content="/meta-img.png" />
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://tdk-mclaren-lilac.vercel.app/" />
+<meta property="twitter:title" content="TDK-MClaren" />
+<meta property="twitter:description" content="The future of electric mobility is here. TDK and NEOM McLaren Formula E" />
+<meta property="twitter:image" content="/meta-img.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
